2017-08-20  Charlie Zender  <zender@uci.edu>

	* Skip autoconversion of atomic types to CDF5 destination files

	* Add explicitly supported suffixes .nc5, .nc6, .nc7 to ncclimo, nco.texi, ncecat.c

	* Fix getopt() --64bit_offset code path

	* Implement CDF5 choices in getopt() for all operators

2017-08-18  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.9-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.9-alpha01 final changes';git push
	git tag -a 4.6.9-alpha01 -m 'default print CDL, ANN false-positive, edison module udunits2';git push --tags

	* Add --trd where needed in regression tests

	* Change default printing from TRD to CDL

2017-08-17  Charlie Zender  <zender@uci.edu>

	* Replace ACME by E3SM or ACME/E3SM as appropriate

2017-08-16  Charlie Zender  <zender@uci.edu>

	* Fix ncclimo false-positive warning about ANN

	* ncclimo on edison now loads module udunits2 not udunits

	* NCO 4.6.8 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.8 final changes';git push
	git tag -a 4.6.8 -m 'ncap2 cnk, ncks dt_fmt, seasons, msk=none,	ncwa_hyp_msk_wgt bug';git push --tags

2017-08-15  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.8-beta02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.8-beta02 final changes';git push
	git tag -a 4.6.8-beta02 -m 'documentation';git push --tags

	* Document fl_fmt for 4.6.8 release

2017-08-14  Charlie Zender  <zender@uci.edu>

	* --dt_fmt implies --cdl (and --cln)

	* NCO 4.6.8-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.8-beta01 final changes';git push
	git tag -a 4.6.8-beta01 -m 'ncclimo custom libraries,rgr msk=byte,none,NC_EGLOBAL';git push --tags

	* Change custom library overrides for ncclimo/ncremap to use netCDF 4.4.1.X

	* Change custom build procedures for titan, rhea, yellowstone to use netCDF 4.4.1.X so CDF5 always works

	* Create --map_[src/dst]='none' to short-circuit mask processing in nco_grd_nfr()

2017-08-11  Charlie Zender  <zender@uci.edu>
